Cloo.Compiler/CompilerMessages.txt
## Error messages generated by the AMD compiler
"C:\Users\xxx\AppData\Local\Temp\OCL916T8.cl", line 6: error: identifier "s"
          is undefined
    if (idx < num) x[idx] = x[idx] + y[idx];s
  	                                        ^

"C:\Users\xxx\AppData\Local\Temp\OCL916T8.cl", line 7: error: expected a ";"
  }
  ^

2 errors detected in the compilation of "C:\Users\xxx\AppData\Local\Temp\OCL916T8.cl".
Frontend phase failed compilation.

## Error messages generated by the Intel compiler
Compilation started
1:5:42: error: use of undeclared identifier 's'
1:44:40: error: use of undeclared identifier 'd'
Compilation failed

Compilation started
2:4:43: error: use of undeclared identifier 'kek'
Compilation failed